<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DalOOC</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit_course">Edit Course</string>
    <string name="action_edit_learning_object">Edit Learning Object</string>
    <string name="action_new_course">New Course</string>
    <string name="action_remove_course">Remove Course</string>
    <string name="action_new_learning_object">New Learning Object</string>
    <string name="action_new_video">New Video</string>
    <string name="action_new_audio">New Audio</string>
    <string name="action_new_document">New Document</string>
    <string name="action_new_test_question">New Test Question</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_activity_learning_object">Learning Object Name</string>
    <string name="select_video">Select Video</string>
    <string name="select_audio">Select Audio</string>
    <string name="select_document">Select Document</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="test_questions">Test Questions</string>
    <string name="syllabus">Syllabus</string>
    <string name="courses">COURSES</string>
    <string name="instructor">Instructor</string>
    <string name="course_detail">Course Detail</string>
    <string name="name">Name</string>
    <string name="question">Question</string>
    <string name="description">Description</string>
    <string name="order">Order</string>
    <string name="correct_questions_ratio">Correct Questions Ratio</string>
    <string name="related_content">Related content</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="references">References</string>
    <string name="options">Options</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="learning_objects">Learning Objects</string>
    <string name="no_references">No references</string>
    <string name="no_prerequisites">No prerequisites</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="prerequisite_edit_text_hint">Prerequisite</string>
    <string name="reference_edit_text_hint">Reference</string>
    <string name="select_related_content">Select</string>
    <string name="clear_related_content">Clear</string>
    <string name="title_activity_course">Course Name</string>
    <string name="title_activity_audio_detail">Audio Detail</string>
    <string name="title_activity_video_detail">Video Detail</string>
    <string name="title_activity_document_detail">Document Detail</string>
    <string name="title_activity_test_question_detail">Test Question Detail</string>
    <string name="title_activity_document_preview">Document Preview</string>
    <string name="title_activity_course_edit">Course Edit</string>
    <string name="title_activity_create_user">Create User</string>
    <string name="ib_audio_play_description">Press this button to listen to the selected audio</string>
    <string name="ib_audio_record_description">Press this button to record a new audio</string>
    <string name="no_application_available">No Application Available to View PDF</string>
    <string name="no_document_added">No document was added to this learning object</string>
    <string name="no_video_added">No video was added to this learning object</string>
    <string name="no_audio_added">No audio was added to this learning object</string>
    <string name="course_remove_confirm">Do you really want to remove this course?</string>
    <string name="video_overwrite_confirm">Do you really want to replace the old video file?</string>
    <string name="audio_overwrite_confirm">Do you really want to replace the old audio file?</string>
    <string name="want_to_do_registration">No user was found with this email. Do you want to register a new user?</string>
    <string name="document_overwrite_confirm">Do you really want to replace the old document file?</string>
    <string name="default_overwrite_confirm">Do you really want to replace the old file?</string>
    <string name="problems_uploading_file">We are unable to upload your file now. Please try again later.</string>
    <string name="problems_downloading_file">We are unable to load the preview now. Please try again later.</string>
    <string name="download_preview_in_progress">Loading preview file</string>
    <string name="no_file_to_open">There is no file to open</string>
    <string name="no_file_to_download">There is no file to download</string>
    <string name="download_file_in_progress">Download started</string>
    <string name="upload_file_in_progress">Uploading file&#8230;</string>
    <string name="successfull_upload">Your file was uploaded</string>
    <string name="confirm">Confirmation</string>
    <string name="confirm_message">Do you confirm?</string>
    <string name="dialog_title_course">Course Edit</string>
    <string name="dialog_title_learning_object">Learning Object Edit</string>
    <string name="dialog_title_video">Video Edit</string>
    <string name="dialog_title_audio">Audio Edit</string>
    <string name="dialog_title_document">Document Edit</string>
    <string name="dialog_title_test_question">Test Question Edit</string>
    <string name="confirm_changes">Do you want to save the changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="answer">Answer</string>
    <string name="connection_error">Connection error. Please try again later.</string>
    <string name="successful_downloaded"> was successfuly downloaded.</string>
    <string name="unable_create_file">Unable to create new file</string>
    <string name="download_complete">Download complete</string>
    <string name="title_course_list">Courses</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="title_activity_learning_object_edit">Learning Object Edit</string>
    <string name="title_activity_video_edit">Video Edit</string>
    <string name="title_activity_audio_edit">Audio Edit</string>
    <string name="title_activity_document_edit">Document Edit</string>
    <string name="title_activity_test_question_edit">Test Question Edit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="hint_email">your@email.com</string>
    <string name="prompt_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_user_type">User Type</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_register"><b>Send Registration</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="registering_user">Registering user&#8230;</string>
    <string name="user_registered">An email was sent to you.\nPlease confirm your address by clicking on the link enclosed.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_passwords_mismatch">Passwords doesn\'t match</string>
    <string name="error_email_not_validated">Email address not confirmed yet. Check your email inbox.</string>
    <string name="error_email_unavailable">This email address it\'s already being used. Please select another address.</string>
    <string name="error_server_not_responding">Server is not responding. Please try again later.</string>
    <string name="error_unable_to_save_course">We\'re unable to save this course now. Please try again later.</string>
    <string name="error_unable_to_update_course">We\'re unable to update this course now. Please try again later.</string>
    <string name="error_unable_to_remove_course">We\'re unable to remove this course now. Please try again later.</string>
    <string name="error_unable_to_process_login_request_course">We\'re unable to process your login request now. Please try again later.</string>
    <string name="error_unable_to_process_auto_login_for">We\'re unable to process auto login for</string>
    <string name="error_unable_to_save_test_answer">We\'re unable to save your answer now. Please try again later.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_options_required">At least one option is required</string>
    <string name="error_correct_answer_required">A selected correct option is required</string>

</resources>