<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--     <item -->
<!--         android:id="@+id/action_settings" -->
<!--         android:orderInCategory="100" -->
<!--         android:showAsAction="never" -->
<!--         android:title="@string/action_settings"/> -->

    <item
        android:id="@+id/action_edit_learning_object"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_edit_learning_object"/>

    <item
        android:id="@+id/action_new_video"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_new_video"/>

    <item
        android:id="@+id/action_new_audio"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_new_audio"/>

    <item
        android:id="@+id/action_new_document"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_new_document"/>

</menu>