<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout android:id="@+id/llRegisterStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvRegisterStatusMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
	<ScrollView android:id="@+id/svRegisterForm"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".CreateUserActivity">
		
		<LinearLayout android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	   		android:orientation="vertical">
	   		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/prompt_first_name" />
		
		    <EditText
		        android:id="@+id/etFirstName"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10" >
		        <requestFocus />
		    </EditText>
		    
		     <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/prompt_last_name" />
		
		    <EditText
		        android:id="@+id/etLastName"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/prompt_email" />
		
		    <EditText
		        android:id="@+id/etEmail"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/hint_email"
		        android:inputType="textEmailAddress" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/prompt_password" />
		
		    <EditText
		        android:id="@+id/etPassword"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/hint_password"
		        android:inputType="textPassword" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/prompt_retype_password" />
		
		    <EditText
		        android:id="@+id/etRetypePassword"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/hint_password"
		        android:inputType="textPassword" />
		
		    <Button
		        android:id="@+id/btnRegister"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_gravity="center"
		        android:text="@string/action_register" />
	    </LinearLayout>
	</ScrollView>
</merge>
