<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DocumentEditActivity" >
    
  	<!-- progress status -->

    <LinearLayout
        android:id="@+id/llUploadPreviewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvUploadStatusMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/download_preview_in_progress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
    <LinearLayout  android:id="@+id/llForm"
	   android:layout_width="match_parent"
	   android:layout_height="match_parent"
	   android:layout_gravity="center"
	   android:gravity="center_horizontal"
	   android:orientation="vertical">
    
		<ScrollView android:layout_width="match_parent"
		    android:layout_height="match_parent" 
		    android:layout_weight="1">
		
		    <LinearLayout  android:id="@+id/llTestQuestionEdit"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginBottom="10dp"
		    	android:layout_marginRight="10dp"
		    	android:layout_marginLeft="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		
		        <TextView  android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/name" 
		            android:textStyle="bold"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		
		        <EditText android:id="@+id/etName"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:inputType="textShortMessage"
		            android:ems="10" >
		
		            <requestFocus />
		        </EditText>
		
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/description" 
		            android:textStyle="bold"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		
		        <EditText android:id="@+id/etDescription"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:inputType="textMultiLine" />
		        
		        <LinearLayout  android:id="@+id/llDocumentEditButtons"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:orientation="horizontal" />
			        
		    </LinearLayout>
		
		</ScrollView>
		
		<LinearLayout android:layout_width="match_parent"
	    	android:layout_height="match_parent"
      		android:layout_weight="11"
      		style="?android:attr/buttonBarStyle"
		    android:orientation="horizontal" >
		    
			<Button android:id="@+id/btnSave"
		   		android:layout_width="match_parent"
	      		android:layout_height="wrap_content" 
	      		android:text="@string/save"
	      		android:layout_weight="1" 
	      		android:background="#222222"
	      		android:textColor="#FFFFFF"
	      		style="?android:attr/buttonBarButtonStyle" />
		
		    <Button android:id="@+id/btnDiscard"
		        android:layout_width="match_parent"
	      		android:layout_height="wrap_content"
	      		android:text="@string/discard"
	      		android:layout_weight="1"
	      		android:background="#222222"
	      		android:textColor="#FFFFFF"
	      		style="?android:attr/buttonBarButtonStyle" />
		    
	    </LinearLayout>
	</LinearLayout>
</merge>